--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <!-- Create your form here -->
-<%= form_tag posts_path do %>
+<%= form_tag new_student_path do %>
   <label>Post title:</label><br>
   <%= text_field_tag :'post[title]' %><br>
  
