--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,11 +1,12 @@
+<h3>Student Form</h3>
 <!-- Create your form here -->
-<%= form_tag new_student_path do %>
+<%= form_tag students_path do %>
   <label>Student First Name:</label><br>
-  <%= text_field_tag :'student[first_name]' %><br>
- 
+  <%= text_field_tag :first_name %><br>
+
   <label>Student Last Name:</label><br>
-  <%= text_area_tag :'student[last_name]' %><br>
- 
-  <%= submit_tag "Submit Name" %>
+  <%= text_area_tag :last_name %><br>
+
+  <%= submit_tag "Submit Student" %>
 <% end %>
 
