--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <!-- Create your form here -->
-<%= form_tag new_student_path do %>
+<%= form_tag student_path do %>
   <label>Student First Name:</label><br>
   <%= text_field_tag : :first_name %><br>
  
