Automatically backed up by Learn

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -6,6 +6,6 @@
   <label>Student Last Name</label><br>
   <%= text_area_tag :last_name %><br>
  
-  <%= submit_tag "Submit Name" %>
+  <%= submit_tag "Submit Student" %>
 <% end %>
 
