--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,6 @@
 <!-- Create your form here -->
 <%= form_tag students_path do %>
+<label>Student Form</label>
   <label>Student First Name</label><br>
   <%= text_field_tag :first_name %><br>
  
@@ -8,4 +9,6 @@
  
   <%= submit_tag "Submit Student" %>
 <% end %>
+
+
 
